--- a/docs/isbi2017/fmri_bib.bib
+++ b/docs/isbi2017/fmri_bib.bib
@@ -140,4 +140,35 @@
   publisher = {Elsevier},
 }
 
+@InProceedings{blumensath2012resting,
+  author       = {Blumensath, Thomas and Behrens, Timothy EJ and Smith, Stephen M},
+  title        = {Resting-state FMRI single subject cortical parcellation based on region growing},
+  booktitle    = {International Conference on Medical Image Computing and Computer-Assisted Intervention},
+  year         = {2012},
+  pages        = {188--195},
+  organization = {Springer},
+}
+
+@Article{wang2006changes,
+  author    = {Wang, Liang and Zang, Yufeng and He, Yong and Liang, Meng and Zhang, Xinqing and Tian, Lixia and Wu, Tao and Jiang, Tianzi and Li, Kuncheng},
+  title     = {Changes in hippocampal connectivity in the early stages of Alzheimer's disease: evidence from resting state fMRI},
+  journal   = {Neuroimage},
+  year      = {2006},
+  volume    = {31},
+  number    = {2},
+  pages     = {496--504},
+  publisher = {Elsevier},
+}
+
+@Article{shi2000normalized,
+  author    = {Shi, Jianbo and Malik, Jitendra},
+  title     = {Normalized cuts and image segmentation},
+  journal   = {IEEE Transactions on pattern analysis and machine intelligence},
+  year      = {2000},
+  volume    = {22},
+  number    = {8},
+  pages     = {888--905},
+  publisher = {IEEE},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
